assets/scss/partials/_modal-nav-hover.scss
@keyframes circle-square-transition {
    0% {
        opacity: 0.4;
        width: 100px;
        height: 50px;
        margin-top: -50px;
        border-radius: 50%;
    }

    25% {
        width: 150px;
        height: 150px;
        opacity: 0.25;
        margin-top: -50px;
        border-radius: 50%;
    }

    50% {
        opacity: 0.5;
        width: 350px;
        height: 350px;
        margin-top: -50px;
        border-radius: 50%;

    }

    75% {
        opacity: 0.75;
        width: 450px;
        height: 400px;
        margin-top: -50px;
        border-radius: 0 0 30% 30%;
    }

    100% {
        opacity: 1;
        border-radius: 0 0 5% 5%;

    }
}

@keyframes transition-opacity {
    0% {
        opacity: 0;
    }


    100% {
        opacity: 1;
    }
}


@keyframes transition-color {
    0% {
        background-color: transparent;
    }

    50% {
        opacity: 0.3;
        background-color: $dark-blue-11;
    }
    50% {
        opacity: 0.6;
        background-color: $dark-blue-11;
    }
    100% {
        opacity: 1;
        background-color: $dark-blue-11;
    }
}

.modal-nav-hover {
    width: 100%;
    position: fixed;
    top: $height-nav;
    overflow-y: auto;
    z-index: $z-index-modal;
    backdrop-filter: blur(30px);
    height: calc(100vh - #{$height-nav});
    animation-direction: reverse;
    animation-name: transition-color;


    &.color-transition {
        animation-delay: .8s;
        animation-direction: normal;
        animation-name: transition-color;
        animation-fill-mode: forwards;
    }

    @include breakpoint(medium down) {
        top: calc(#{$height-nav-medium} + 1px);
        height: calc(100% - #{$height-nav-medium});
    }

    .modal-content {
        padding: 0 116px;
        animation-duration: 1s;

        transform: $transition-tertiary;
    }

    .modal-body {
        overflow: hidden;
        animation-duration: .4s;
        padding: 105px 0 0 102px;
        transition: $transition-primary;
        background-color: rgba($white, 0.87);

        &.circle-square-transition {
            animation-name: circle-square-transition;
        }

        .opacity {
            opacity: 0;

            &.opacity-transition {
                animation-delay: .4s;
                animation-duration: .4s;
                animation-name: transition-opacity;
                animation-fill-mode: forwards
            }
        }


        &.hide {
            animation-direction: reverse;
            animation-name: circle-square-transition;
        }

        .cell-menu {
            max-width: 230px;

            .menu {
                padding: 0;
                list-style: none;

                li {
                    padding: 20px;
                    cursor: pointer;
                    text-transform: uppercase;
                    border-bottom: 1px solid rgba($black, 0.10);

                    &.active {
                        background-color: $blue-0;

                        a {
                            color: $white;

                            &:active,
                            &:hover,
                            &:visited {
                                color: $white;
                            }
                        }
                    }

                    a {
                        color: $black;
                        line-height: 1.5;
                        font-size: 1.5rem;
                        font-weight: $bold;

                        &:active,
                        &:hover,
                        &:visited {
                            color: $black;
                        }
                    }
                }
            }
        }
    }
}

